--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -635,6 +635,11 @@ footer p {
     height: 200px;
 }
 
+.blog-img img {
+    width: 200px !important;
+    height: 230px;
+}
+
 .blog-box .blog-text h6 {
     font-size: 15px;
     margin: 10px 0px 10px;
@@ -646,9 +651,14 @@ footer p {
 
 .blog-box .blog-text p {
     font-size: 14px;
-    line-height: 25px;
+    line-height: 27px;
     padding: 0px;
     margin: 0px 0px 15px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    letter-spacing: 0.3px;
 }
 
 .blog-icon {
@@ -777,4 +787,59 @@ footer p {
 
 .aboutus .white-space-box {
     padding: 30px 30px;
+}
+
+.book-box-item {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 10px 0px;
+    border: 2px solid #f2f2f2;
+    border-radius: 6px;
+    padding: 0px;
+    box-shadow: 0px 5px 10px #ebebeb;
+    gap: 10px;
+}
+
+.book-box-item .book_images {
+    width: 250px;
+    position: relative;
+    margin: 0;
+    padding: 0px 10px;
+    display: inline-block;
+    background: #f2f2f2;
+}
+
+.book_text h4 {
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.book_text p {
+    font-size: 14px;
+    line-height: 25px;
+    letter-spacing: 0.3px;
+    margin-bottom: 10px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.book_text h6 {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 23px;
+    letter-spacing: 0.2px;
+    margin: 0px 0px 10px;
+}
+
+.rating span {
+    color: #f5df4e;
+    font-size: 14px;
+}
+.book_images img {
+    width: 140px !important;
 }
